<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/design_default_color_primary">

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#ffff"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp"
        android:background="#ffff">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_person_24"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:inputType="text"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_lock_24"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/bg_round"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"
            android:onClick="login"
            android:textColor="#ffff"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_any_account"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_register"
                android:onClick="register"
                android:textColor="@color/design_default_color_primary"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>