<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Regist">

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_register"
        android:textColor="@color/design_default_color_primary"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_username"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/et_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_password"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/et_pass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:inputType="textVisiblePassword"
        android:importantForAutofill="no"/>

    <TextView
        android:id="@+id/tv_rpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_repeat_password"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/et_rpass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:inputType="textVisiblePassword"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_register"
        android:textStyle="bold"
        android:textColor="#ffff"
        android:onClick="regist"
        android:background="@drawable/bg_round"/>

</LinearLayout>